# InputListener

./: .gitignore  CMakeLists.txt
examples/: basic.cpp
include/InputListener/: GlobalScreen.h  InputListener.h  ListenerConnection.h
include/InputListener/dispatcher/: KeyEventDispatcher.h  MouseEventDispatcher.h
include/InputListener/event/: KeyEvent.h  MouseEvent.h
include/InputListener/listener/: KeyListener.h  MouseListener.h
src/: GlobalScreen.cpp  KeyMapping.h  ListenerConnection.cpp
src/cpp/: GlobalScreen.cpp  test.cpp
src/dispatcher/: KeyEventDispatcher.cpp  KeyEventDispatcher.h  MouseEventDispatcher.cpp  MouseEventDispatcher.h
src/event/: KeyEvent.cpp  MouseEvent.cpp
src/headers/: GlobalScreen.h
src/headers/event/: KeyEvent.h  MouseEvent.h
src/listener/: KeyListener.cpp  MouseListener.cpp
src/platform/: LinuxInputListener.cpp  MacOSInputListener.cpp  PlatformInputListener.h  UnsupportedInputListener.cpp  WindowsInputListener.cpp
